# RayTracing

./: CBox.cpp  CBox.h  CBox.hpp  CFactory.h  CFactory.hpp  CFactoryBox.h  CFactoryBox.hpp  CFactorySphere.h  CFactorySphere.hpp  CFactoryTetra.h  CFactoryTetra.hpp  CLight.h  CLight.hpp  CMakeLists.txt  CObject.h  CSphere.cpp  CSphere.h  CSphere.hpp  CTetra.cpp  CTetra.h  CTetra.hpp  README.md  data1.txt  data2.txt  functions.cpp  functions.h  functions.hpp  main.cpp  template.hpp
data/: objects.txt  parameters.txt
